finished list; added pre element to input sonnet

--- a/dogblog.html
+++ b/dogblog.html
@@ -5,9 +5,24 @@
   <title>Dog Blog</title>
   </head>
   <body>
-  	<h1>The breeds I'm considering in decending order:</h1>
+  	<h1>The breeds I'm considering (in decending order):</h1>
   	<ol>
   		<li>Pug</li>
   		<li>Mastiff</li>
+  		<li>Golden Retriever</li>
+  		<li>Pug or Mastiff, again</li>
   	</ol>
+
+  	<h2>I really like Pugs and Mastiffs</h2>
+  	
+  	<h3>A sonnet in ode to the day</h3>
+  	
+  	<pre>
+  	There are many days
+    That seem almost a like but
+    This one is different
+  	</pre>
+
   </body>
+
+<html>
