fixed sonnet bug

--- a/dogblog.html
+++ b/dogblog.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-  <title>Dog Blog</title>
+    <title>Dog Blog</title>
   </head>
   <body>
   	<h1>The breeds I'm considering (in decending order):</h1>
@@ -17,13 +17,13 @@
   	
   	<h3>A sonnet in ode to the day</h3>
   	
-  	<pre>
-  	  There are many days
+  	<p>
+  	  There are many days<br>
 
-      That seem almost alike but
+      That seem almost alike but<br>
     
-      This one is different
-  	</pre>
+      This one is different<br>
+  	</p>
 
   </body>
 
