switched out sonnet for haiku

--- a/dogblog.html
+++ b/dogblog.html
@@ -15,7 +15,7 @@
 
   	<h2>I really like Pugs and Mastiffs</h2>
   	
-  	<h3>A sonnet in ode to the day</h3>
+  	<h3>A Haiku in ode to the day</h3>
   	
   	<p>
   	  There are many days<br>
