--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,11 +4,13 @@
     <title>Web page #1!</title>
   </head>
   <body>
-    <h1>My first web page</h1>
-    <h2>Written with the guidance of Epicodus</h2>
+    <h1>My <strong>first web page</strong></h1>
+    <h2>Written with the guidance of <em>Epicodus</em></h2>
 
     <p>This is my first web page!</p>
     <p>Isn't it nice?</p>
+
+    <img src="neomastiff.jpeg" alt="A photo of a Mastiff">
 
     <p>Here are some things I'm going to learn about coding:</p>
     <ul>
@@ -17,5 +19,9 @@
       <li>JavaScript</li>
       <li>And a lot more!</li>
     </ul>
+
+    <p> Here is a link to my <a href="dogblog.html"> dogblog</a>.</p>
+
+    <p> Check out <a href="http://epicodus.com/">Epicodus</a>.  It's a good school if you want to learn web programming!</p>
   </body>
 </html>
