added src code for img

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -10,7 +10,7 @@
     <p>This is my first web page!</p>
     <p>Isn't it nice?</p>
 
-    <img src="neomastiff.jpeg" alt="A photo of a Mastiff">
+    <img src="img/neomastiff.jpeg" alt="A photo of a Mastiff">
 
     <p>Here are some things I'm going to learn about coding:</p>
     <ul>
