added content to first-website, favorite-website; linked favorite to dogblog; added imgs and links to favorite

--- a/favorite-webpage.html
+++ b/favorite-webpage.html
@@ -6,29 +6,44 @@
 	<title>Brian's favorite things</title>
   </head>
   <body>
-    <h1>My favorite things</h1>
+    <h1><strong>My favorite things</strong></h1>
     <h2>These are some of my favorite things.</h2>
 
     <h3>People</h3>
-    <p>Here are some of my favorite people!</p>
+    <p>Here are some of my <em>favorite people</em>!</p>
     <ul>
-      <li>My brother Aidan</li>
+      <li>My brothers:</li>
+      <ul>
+        <li>Aidan</li>
+        <li>Jon</li>
+        <li>Evan</li>
+      </ul>
       <li>My mom and step-poppa:</li>
     	<ul>
     	  <li>Steve</li>
     	  <li>Diane</li>
     	</ul>
       <li>My friend Sarah</li>
+      <img src="img/SarahP.jpeg" alt="Photo of greatest woman alive">
       <li>My friend Milo</li>
+      <img src="img/MiloPfuff.jpeg" alt="Photo of worst person ever">
     </ul>
 
     <h3>Flavors of ice cream</h3>
-    <p>These are my three favorrites, in order:</p>
+    <p>These are my three favorites, in order:</p>
     <ol>
       <li>Pistachio</li>
       <li>Mint Chocolate Chip</li>
       <li>Black Licorice</li>
     </ol>
+
+    <h4>My favorite daily websites:</h4>
+    <ul>
+      <li>My <a href="dogblog.html">Dogblog</a> is always a good way to learn more about me</li>
+      <li>I use <a href="http://www.theatlantic.com">The Atlantic</a> to keep up with current affairs</li>
+      <li>To quench my literary needs <a href="http://www.theparisreview.org">The Paris review</a> serves me well</li>
+      <li>For learning I use several sources but I love <a href="https://www.wikipedia.org"> Wikipedia</a> most</li>
+    </ul>
       
     <p>Thanks for reading about me!</p>
   </body>
