--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -20,7 +20,8 @@
       <li>And a lot more!</li>
     </ul>
 
-    <p> Here is a link to my <a href="dogblog.html"> dogblog</a>.</p>
+    <p>Here is a link to my <a href="dogblog.html"> dogblog</a>.</p>
+    <p>Here is a link to my <a href="favorite-webpage"> favorite webpage</a>.</p>
 
     <p> Check out <a href="http://epicodus.com/">Epicodus</a>.  It's a good school if you want to learn web programming!</p>
   </body>
