palin's big old face is now smaller

--- a/favorite-webpage.html
+++ b/favorite-webpage.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<<!DOCTYPE html>
 <html>
   
   <head>
 	<title>Brian's favorite things</title>
+	<style>
+		#palin-pic {
+			width: 100%;
+		}
+	</style>
   </head>
   <body>
     <h1><strong>My favorite things</strong></h1>
@@ -24,7 +28,7 @@
     	  <li>Diane</li>
     	</ul>
       <li>My friend Sarah</li>
-      <img src="img/SarahP.jpeg" alt="Photo of greatest woman alive">
+      <img id="palin-pic" src="img/SarahP.jpeg" alt="Photo of greatest woman alive">
       <li>My friend Milo</li>
       <img src="img/MiloPfuff.jpeg" alt="Photo of worst person ever">
     </ul>
