--- a/favorite-webpage.html
+++ b/favorite-webpage.html
@@ -15,22 +15,26 @@
 
     <h3>People</h3>
     <p>Here are some of my <em>favorite people</em>!</p>
+    <h4>My brothers:</h4> 
+    <ul> 
+      <li>Aidan</li>
+      <li>Jon</li>
+      <li>Evan</li>
+    </ul>
+    <h4>My mom and step-poppa:</h4>
     <ul>
-      <li>My brothers:</li>
-      <ul>
-        <li>Aidan</li>
-        <li>Jon</li>
-        <li>Evan</li>
-      </ul>
-      <li>My mom and step-poppa:</li>
-    	<ul>
-    	  <li>Steve</li>
-    	  <li>Diane</li>
-    	</ul>
-      <li>My friend Sarah</li>
-      <img id="palin-pic" src="img/SarahP.jpeg" alt="Photo of greatest woman alive">
-      <li>My friend Milo</li>
-      <img src="img/MiloPfuff.jpeg" alt="Photo of worst person ever">
+	    <li>Steve</li>
+    	<li>Diane</li>
+    </ul>
+    <ul>
+      <li>
+        <h4>My <span class="bold">friend</span> Sarah</h4>
+        <img id="palin-pic" src="img/SarahP.jpeg" alt="Photo of greatest woman alive">
+      </li>
+      <li>
+        <h4>My friend Milo</h4>
+        <img src="img/MiloPfuff.jpeg" alt="Photo of worst person ever">
+      </li>
     </ul>
 
     <h3>Flavors of ice cream</h3>
