--- a/dogblog.html
+++ b/dogblog.html
@@ -22,7 +22,7 @@
 
       That seem almost alike but<br>
     
-      This one is diff'rent<br>
+      This one is diff/rent<br>
   	</p>
 
   </body>
